--- a/css/garden.scss
+++ b/css/garden.scss
@@ -1,5 +1,5 @@
-$font-nav:24px;
-
+$font-nav:19px;
+$font-h3:24px
 * {
     padding: 0;
     margin: 0;
@@ -93,7 +93,7 @@ h3 {
 
         .garden_info_text {
             .garden_info_text_up {
-                .garden_info_text_up_en {}
+                // .garden_info_text_up_en {}
 
                 .garden_info_text_up_zh {
                     margin: 50px;
