--- a/當季活動/css/april.css
+++ b/當季活動/css/april.css
@@ -1,27 +1,52 @@
-.container {
+* {
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+p {
+  font-size: 19px;
+}
+
+h2 {
+  font-size: 67px;
+}
+
+h3 {
+  font-size: 36px;
+}
+
+h4 {
+  font-size: 24px;
+}
+
+h5 {
+  font-size: 21px;
+}
+
+main {
+  overflow: hidden;
+}
+
+.april_banner {
   width: 100%;
-}
-
-.container .april_banner {
   height: 100vh;
-  background-image: url("https://picsum.photos/1000/800?random=1");
-  background-position: center;
-  background-size: cover;
-  position: relative;
+  background-color: grey;
   margin-bottom: 200px;
+  position: relative;
 }
 
-.container .april_banner .april_banner_text .april_banner_text_title {
+.april_banner .april_banner_text .april_banner_text_title {
   font-size: 80px;
-  position: absolute;
-  top: 300px;
-  left: 300px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
-.container .april_banner .april_banner_text .april_banner_text_subtitle {
+.april_banner .april_banner_text .april_banner_text_subtitle {
   font-size: 50px;
-  width: 400px;
-  height: 50px;
   -webkit-transform: rotate(-20deg);
   transform: rotate(-20deg);
   position: absolute;
@@ -30,23 +55,298 @@
 }
 
 .april_woods {
+  width: 100%;
+  margin-bottom: 200px;
+  position: relative;
+}
+
+.april_woods .april_woods_middle {
+  height: 730px;
+  background-color: grey;
+}
+
+@media (max-width: 1139px) {
+  .april_woods .april_woods_middle {
+    height: 485px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods .april_woods_middle {
+    height: 365px;
+  }
+}
+
+.april_woods .april_woods_left {
+  height: 422px;
+  background-color: orange;
+  position: absolute;
+  top: 160px;
+  left: 100px;
+}
+
+@media (max-width: 1139px) {
+  .april_woods .april_woods_left {
+    height: 255px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods .april_woods_left {
+    height: 190px;
+  }
+}
+
+.april_woods .april_woods_square {
+  width: 106px;
+  height: 32px;
+  background-color: orange;
+  position: absolute;
+  top: 275px;
+  right: -20px;
+}
+
+.april_woods .april_woods_right .april_woods_right_title {
+  width: 395px;
+  position: absolute;
+  top: 100px;
+  right: -40px;
+}
+
+.april_woods .april_woods_right .april_woods_right_title h2 {
+  font-size: 85px;
+}
+
+.april_woods .april_woods_right .april_woods_right_content {
+  width: 270px;
+  position: absolute;
+  bottom: 200px;
+  right: 0;
+}
+
+.april_woods .april_woods_right .april_woods_right_content p {
+  font-size: 20px;
+}
+
+.april_2block_top {
+  height: 100hv;
+  position: relative;
+}
+
+.april_2block_top .april_2block_top_left {
+  background-color: grey;
+  height: 895px;
+}
+
+.april_2block_top .april_2block_top_right {
+  background-color: orange;
+  height: 895px;
+}
+
+.april_700m {
+  width: 100%;
+  height: 100vh;
+  background-color: #cfbcbc;
+  margin-bottom: 400px;
+}
+
+.april_700m .april_700m_box {
   position: relative;
   width: 100%;
 }
 
-.april_woods .april_woods_middle {
-  width: 60%;
+.april_700m .april_700m_box .april_700m_squareleft {
+  background-color: red;
+  height: 880px;
+  width: 755px;
+  position: absolute;
+  top: -250px;
+  left: -405px;
 }
 
-.april_woods .april_woods_left {
-  width: 40%;
-  position: absolute;
-  left: 0;
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box {
+    height: 375px;
+  }
 }
 
-.april_woods .april_woods_right {
-  width: 50%;
+@media (max-width: 767px) {
+  .april_700m .april_700m_box {
+    height: 335px;
+  }
+}
+
+.april_700m .april_700m_box .april_700m_mainimg {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
   position: absolute;
-  left: 0;
+  top: -10px;
+  left: 240px;
+}
+
+.april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_down {
+  position: absolute;
+  top: 70px;
+  left: 430px;
+}
+
+.april_700m_squarerighttop {
+  background-color: grey;
+  height: 378px;
+  width: 378px;
+  position: absolute;
+  bottom: 350px;
+  right: -170px;
+}
+
+.april_700m_squarerightbottomAleft {
+  background-color: #289462;
+  height: 350px;
+  position: absolute;
+  top: 360px;
+  right: 0px;
+}
+
+.april_700m_squarerightbottomBright {
+  background-color: #bb7de4;
+  height: 300px;
+  position: absolute;
+  top: 150px;
+  right: -185px;
+}
+
+.april_may {
+  width: 100%;
+  margin-bottom: 200px;
+  position: relative;
+}
+
+.april_may .april_may_title {
+  margin-bottom: 100px;
+}
+
+.april_may .april_may_content .april_may_middle {
+  height: 730px;
+  background-color: grey;
+}
+
+@media (max-width: 1139px) {
+  .april_may .april_may_content .april_may_middle {
+    height: 485px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_content .april_may_middle {
+    height: 365px;
+  }
+}
+
+.april_may .april_may_content .april_may_left {
+  height: 422px;
+  background-color: orange;
+  position: absolute;
+  top: 300px;
+  left: 100px;
+}
+
+@media (max-width: 1139px) {
+  .april_may .april_may_content .april_may_left {
+    height: 255px;
+    width: 255px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_content .april_may_left {
+    height: 190px;
+    width: 190px;
+  }
+}
+
+.april_may .april_may_content .april_may_left_content {
+  width: 270px;
+  position: absolute;
+  bottom: -20px;
+  left: 100px;
+}
+
+.april_may .april_may_content p {
+  font-size: 20px;
+}
+
+.april_may .april_may_right {
+  width: 374px;
+  height: 374px;
+  background-color: orange;
+  position: absolute;
+  top: 250px;
+  right: 0px;
+}
+
+@media (max-width: 1139px) {
+  .april_may .april_may_right {
+    width: 240px;
+    height: 240px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_right {
+    width: 180px;
+    height: 180px;
+  }
+}
+
+.april_may .april_may_right_content {
+  width: 374px;
+  position: absolute;
+  bottom: 50px;
+  right: 0;
+}
+
+.april_may .april_may_right_content p {
+  font-size: 20px;
+}
+
+.april_2block_bottum {
+  height: 100hv;
+  position: relative;
+}
+
+.april_2block_bottum .april_2block_bottum_left {
+  background-color: grey;
+  height: 895px;
+}
+
+.april_2block_bottum .april_2block_bottum_right {
+  background-color: orange;
+  height: 895px;
+}
+
+.april_stay {
+  height: 370px;
+}
+
+.april_party {
+  background-color: orange;
+  height: 880px;
+}
+
+.april_snow {
+  background-color: grey;
+  height: 600px;
+  padding-top: 180px;
+}
+
+.footer {
+  background-color: grey;
+  height: 150px;
 }
 /*# sourceMappingURL=april.css.map */
