--- a/當季活動/css/april.css
+++ b/當季活動/css/april.css
@@ -4,12 +4,8 @@
           box-sizing: border-box;
 }
 
-p {
-  font-size: 19px;
-}
-
 h2 {
-  font-size: 67px;
+  font-size: 85px;
 }
 
 h3 {
@@ -24,6 +20,46 @@ h5 {
   font-size: 21px;
 }
 
+p {
+  font-size: 19px;
+}
+
+@media (max-width: 1139px) {
+  h2 {
+    font-size: 46px !important;
+  }
+  h3 {
+    font-size: 24px !important;
+  }
+  h4 {
+    font-size: 20px !important;
+  }
+  h5 {
+    font-size: 19px !important;
+  }
+  p {
+    font-size: 16px !important;
+  }
+}
+
+@media (max-width: 767px) {
+  h2 {
+    font-size: 36px !important;
+  }
+  h3 {
+    font-size: 36px;
+  }
+  h4 {
+    font-size: 24px;
+  }
+  h5 {
+    font-size: 21px;
+  }
+  p {
+    font-size: 14px !important;
+  }
+}
+
 main {
   overflow: hidden;
 }
@@ -34,6 +70,18 @@ main {
   background-color: grey;
   margin-bottom: 200px;
   position: relative;
+}
+
+@media (max-width: 1139px) {
+  .april_banner {
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_banner {
+    margin-bottom: 60px;
+  }
 }
 
 .april_banner .april_banner_text .april_banner_text_title {
@@ -60,6 +108,18 @@ main {
   position: relative;
 }
 
+@media (max-width: 1139px) {
+  .april_woods {
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods {
+    margin-bottom: 60px;
+  }
+}
+
 .april_woods .april_woods_middle {
   height: 730px;
   background-color: grey;
@@ -68,12 +128,14 @@ main {
 @media (max-width: 1139px) {
   .april_woods .april_woods_middle {
     height: 485px;
+    width: 360px;
   }
 }
 
 @media (max-width: 767px) {
   .april_woods .april_woods_middle {
     height: 365px;
+    width: 270px;
   }
 }
 
@@ -82,18 +144,23 @@ main {
   background-color: orange;
   position: absolute;
   top: 160px;
-  left: 100px;
+  left: 0px;
 }
 
 @media (max-width: 1139px) {
   .april_woods .april_woods_left {
-    height: 255px;
+    height: 260px;
+    width: 260px;
+    position: absolute;
+    top: 120px;
+    left: 0px;
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1139px) and (max-width: 767px) {
   .april_woods .april_woods_left {
     height: 190px;
+    width: 190px;
   }
 }
 
@@ -106,6 +173,22 @@ main {
   right: -20px;
 }
 
+@media (max-width: 1139px) {
+  .april_woods .april_woods_square {
+    position: absolute;
+    top: 240px;
+    right: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods .april_woods_square {
+    position: absolute;
+    top: 100px;
+    right: -40px;
+  }
+}
+
 .april_woods .april_woods_right .april_woods_right_title {
   width: 395px;
   position: absolute;
@@ -113,8 +196,20 @@ main {
   right: -40px;
 }
 
-.april_woods .april_woods_right .april_woods_right_title h2 {
-  font-size: 85px;
+@media (max-width: 1139px) {
+  .april_woods .april_woods_right .april_woods_right_title {
+    position: absolute;
+    top: 150px;
+    right: -160px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods .april_woods_right .april_woods_right_title {
+    position: absolute;
+    top: 100px;
+    right: -40px;
+  }
 }
 
 .april_woods .april_woods_right .april_woods_right_content {
@@ -124,30 +219,67 @@ main {
   right: 0;
 }
 
-.april_woods .april_woods_right .april_woods_right_content p {
-  font-size: 20px;
+@media (max-width: 1139px) {
+  .april_woods .april_woods_right .april_woods_right_content {
+    width: 180px;
+    position: absolute;
+    bottom: 55px;
+    right: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_woods .april_woods_right .april_woods_right_content {
+    position: absolute;
+    bottom: 200px;
+    right: 0;
+  }
 }
 
 .april_2block_top {
-  height: 100hv;
-  position: relative;
+  width: 100%;
+  height: 895px;
+}
+
+@media (max-width: 1139px) {
+  .april_2block_top {
+    height: 360px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_2block_top {
+    height: 270px;
+  }
 }
 
 .april_2block_top .april_2block_top_left {
   background-color: grey;
-  height: 895px;
 }
 
 .april_2block_top .april_2block_top_right {
   background-color: orange;
-  height: 895px;
 }
 
 .april_700m {
   width: 100%;
   height: 100vh;
   background-color: #cfbcbc;
-  margin-bottom: 400px;
+  margin-bottom: 300px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m {
+    height: 450px;
+    margin-bottom: 150px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m {
+    height: 400px;
+    margin-bottom: 100px;
+  }
 }
 
 .april_700m .april_700m_box {
@@ -160,19 +292,27 @@ main {
   height: 880px;
   width: 755px;
   position: absolute;
-  top: -250px;
+  top: -320px;
   left: -405px;
 }
 
 @media (max-width: 1139px) {
-  .april_700m .april_700m_box {
+  .april_700m .april_700m_box .april_700m_squareleft {
     height: 375px;
+    width: 270px;
+    position: absolute;
+    top: -100px;
+    left: -25px;
   }
 }
 
 @media (max-width: 767px) {
-  .april_700m .april_700m_box {
-    height: 335px;
+  .april_700m .april_700m_box .april_700m_squareleft {
+    height: 375px;
+    width: 270px;
+    position: absolute;
+    top: -100px;
+    left: -25px;
   }
 }
 
@@ -186,14 +326,46 @@ main {
 
 .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
   position: absolute;
-  top: -10px;
+  top: -70px;
   left: 240px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
+    position: absolute;
+    top: -130px;
+    left: 160px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
+    position: absolute;
+    top: -130px;
+    left: 160px;
+  }
 }
 
 .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_down {
   position: absolute;
-  top: 70px;
+  top: 10px;
   left: 430px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_down {
+    position: absolute;
+    top: -75px;
+    left: 260px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_down {
+    position: absolute;
+    top: 10px;
+    left: 430px;
+  }
 }
 
 .april_700m_squarerighttop {
@@ -201,24 +373,84 @@ main {
   height: 378px;
   width: 378px;
   position: absolute;
-  bottom: 350px;
-  right: -170px;
+  bottom: 300px;
+  right: -150px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m_squarerighttop {
+    height: 175px;
+    width: 175px;
+    position: absolute;
+    top: -310px;
+    right: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m_squarerighttop {
+    height: 175px;
+    width: 175px;
+    position: absolute;
+    top: -310px;
+    right: 80px;
+  }
 }
 
 .april_700m_squarerightbottomAleft {
   background-color: #289462;
   height: 350px;
   position: absolute;
-  top: 360px;
+  top: 280px;
   right: 0px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m_squarerightbottomAleft {
+    height: 120px;
+    width: 125px;
+    position: absolute;
+    top: 180px;
+    right: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m_squarerightbottomAleft {
+    height: 120px;
+    width: 125px;
+    position: absolute;
+    top: 180px;
+    right: 50px;
+  }
 }
 
 .april_700m_squarerightbottomBright {
   background-color: #bb7de4;
   height: 300px;
   position: absolute;
-  top: 150px;
+  top: 70px;
   right: -185px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m_squarerightbottomBright {
+    height: 100px;
+    width: 86px;
+    position: absolute;
+    top: 100px;
+    right: -25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m_squarerightbottomBright {
+    height: 100px;
+    width: 86px;
+    position: absolute;
+    top: 100px;
+    right: -25px;
+  }
 }
 
 .april_may {
@@ -227,8 +459,32 @@ main {
   position: relative;
 }
 
+@media (max-width: 1139px) {
+  .april_may {
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may {
+    margin-bottom: 60px;
+  }
+}
+
 .april_may .april_may_title {
   margin-bottom: 100px;
+}
+
+@media (max-width: 1139px) {
+  .april_may .april_may_title {
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_title {
+    margin-bottom: 30px;
+  }
 }
 
 .april_may .april_may_content .april_may_middle {
@@ -258,8 +514,11 @@ main {
 
 @media (max-width: 1139px) {
   .april_may .april_may_content .april_may_left {
-    height: 255px;
-    width: 255px;
+    height: 260px;
+    width: 240px;
+    position: absolute;
+    top: 250px;
+    left: 0px;
   }
 }
 
@@ -267,6 +526,9 @@ main {
   .april_may .april_may_content .april_may_left {
     height: 190px;
     width: 190px;
+    position: absolute;
+    top: 300px;
+    left: 100px;
   }
 }
 
@@ -277,8 +539,24 @@ main {
   left: 100px;
 }
 
-.april_may .april_may_content p {
-  font-size: 20px;
+@media (max-width: 1139px) {
+  .april_may .april_may_content .april_may_left_content {
+    height: 255px;
+    width: 255px;
+    position: absolute;
+    bottom: -200px;
+    left: 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_content .april_may_left_content {
+    height: 190px;
+    width: 190px;
+    position: absolute;
+    bottom: -200px;
+    left: 0px;
+  }
 }
 
 .april_may .april_may_right {
@@ -286,7 +564,7 @@ main {
   height: 374px;
   background-color: orange;
   position: absolute;
-  top: 250px;
+  top: 170px;
   right: 0px;
 }
 
@@ -311,32 +589,78 @@ main {
   right: 0;
 }
 
-.april_may .april_may_right_content p {
-  font-size: 20px;
+@media (max-width: 1139px) {
+  .april_may .april_may_right_content {
+    position: absolute;
+    bottom: 45px;
+    right: -132px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_may .april_may_right_content {
+    position: absolute;
+    bottom: 45px;
+    right: -132px;
+  }
 }
 
 .april_2block_bottum {
-  height: 100hv;
-  position: relative;
+  width: 100%;
+  height: 895px;
+}
+
+@media (max-width: 1139px) {
+  .april_2block_bottum {
+    height: 360px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_2block_bottum {
+    height: 270px;
+  }
 }
 
 .april_2block_bottum .april_2block_bottum_left {
   background-color: grey;
-  height: 895px;
 }
 
 .april_2block_bottum .april_2block_bottum_right {
   background-color: orange;
-  height: 895px;
 }
 
 .april_stay {
   height: 370px;
 }
 
+@media (max-width: 1139px) {
+  .april_stay {
+    height: 150px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_stay {
+    height: 100px;
+  }
+}
+
 .april_party {
   background-color: orange;
   height: 880px;
+}
+
+@media (max-width: 1139px) {
+  .april_party {
+    height: 350px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_party {
+    height: 260px;
+  }
 }
 
 .april_snow {
@@ -345,8 +669,33 @@ main {
   padding-top: 180px;
 }
 
+@media (max-width: 1139px) {
+  .april_snow {
+    height: 250px;
+    padding: 70px 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_snow {
+    height: 290px;
+  }
+}
+
 .footer {
   background-color: grey;
   height: 150px;
+}
+
+@media (max-width: 1139px) {
+  .footer {
+    height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer {
+    height: 50px;
+  }
 }
 /*# sourceMappingURL=april.css.map */
