--- a/當季活動/css/april.scss
+++ b/當季活動/css/april.scss
@@ -3,12 +3,10 @@
     box-sizing: border-box;
 }
 
-p {
-    font-size: 19px;
-}
 
+//字體大小
 h2 {
-    font-size: 67px;
+    font-size: 85px;
 }
 
 h3 {
@@ -23,6 +21,55 @@ h5 {
     font-size: 21px;
 }
 
+p {
+    font-size: 19px;
+}
+
+@media (max-width: 1139px) {
+    h2 {
+        font-size: 46px !important;
+    }
+
+    h3 {
+        font-size: 24px !important;
+    }
+
+    h4 {
+        font-size: 20px !important;
+    }
+
+    h5 {
+        font-size: 19px !important;
+    }
+
+    p {
+        font-size: 16px !important;
+    }
+}
+
+@media (max-width: 767px) {
+
+    h2 {
+        font-size: 36px !important;
+    }
+
+    h3 {
+        font-size: 36px;
+    }
+
+    h4 {
+        font-size: 24px;
+    }
+
+    h5 {
+        font-size: 21px;
+    }
+
+    p {
+        font-size: 14px !important;
+    }
+}
+
 main {
     overflow: hidden;
 }
@@ -33,6 +80,14 @@ main {
     background-color: grey;
     margin-bottom: 200px;
     position: relative;
+
+    @media (max-width: 1139px) {
+        margin-bottom: 100px;
+    }
+
+    @media (max-width: 767px) {
+        margin-bottom: 60px;
+    }
 
 
     .april_banner_text {
@@ -67,16 +122,26 @@ main {
     margin-bottom: 200px;
     position: relative;
 
+    @media (max-width: 1139px) {
+        margin-bottom: 100px;
+    }
+
+    @media (max-width: 767px) {
+        margin-bottom: 60px;
+    }
+
     .april_woods_middle {
         height: 730px;
         background-color: grey;
 
         @media (max-width: 1139px) {
             height: 485px;
+            width: 360px;
         }
 
         @media (max-width: 767px) {
             height: 365px;
+            width: 270px;
         }
 
     }
@@ -86,14 +151,19 @@ main {
         background-color: orange;
         position: absolute;
         top: 160px;
-        left: 100px;
+        left: 0px;
 
         @media (max-width: 1139px) {
-            height: 255px;
-        }
+            height: 260px;
+            width: 260px;
+            position: absolute;
+            top: 120px;
+            left: 0px;
 
-        @media (max-width: 767px) {
-            height: 190px;
+            @media (max-width: 767px) {
+                height: 190px;
+                width: 190px;
+            }
         }
     }
 
@@ -104,6 +174,19 @@ main {
         position: absolute;
         top: 275px;
         right: -20px;
+
+        @media (max-width: 1139px) {
+
+            position: absolute;
+            top: 240px;
+            right: 15px;
+        }
+
+        @media (max-width: 767px) {
+            position: absolute;
+            top: 100px;
+            right: -40px;
+        }
     }
 
     .april_woods_right {
@@ -113,10 +196,19 @@ main {
             top: 100px;
             right: -40px;
 
-            h2 {
-                font-size: 85px;
+            @media (max-width: 1139px) {
+                position: absolute;
+                top: 150px;
+                right: -160px;
+            }
+
+            @media (max-width: 767px) {
+                position: absolute;
+                top: 100px;
+                right: -40px;
             }
         }
+
 
         .april_woods_right_content {
             width: 270px;
@@ -124,26 +216,45 @@ main {
             bottom: 200px;
             right: 0;
 
-            p {
-                font-size: 20px;
+            @media (max-width: 1139px) {
+                width: 180px;
+                position: absolute;
+                bottom: 55px;
+                right: 50px;
+
             }
+
+            @media (max-width: 767px) {
+                position: absolute;
+                bottom: 200px;
+                right: 0;
+            }
+
         }
 
     }
 }
 
 .april_2block_top {
-    height: 100hv;
-    position: relative;
+    width: 100%;
+    height: 895px;
+
+    @media (max-width: 1139px) {
+        height: 360px;
+    }
+
+    @media (max-width: 767px) {
+        height: 270px;
+    }
 
     .april_2block_top_left {
         background-color: grey;
-        height: 895px;
+
     }
 
     .april_2block_top_right {
         background-color: orange;
-        height: 895px;
+
     }
 }
 
@@ -151,7 +262,17 @@ main {
     width: 100%;
     height: 100vh;
     background-color: rgb(207, 188, 188);
-    margin-bottom: 400px;
+    margin-bottom: 300px;
+
+    @media (max-width: 1139px) {
+        height: 450px;
+        margin-bottom: 150px;
+    }
+
+    @media (max-width: 767px) {
+        height: 400px;
+        margin-bottom: 100px;
+    }
 
     .april_700m_box {
         position: relative;
@@ -162,18 +283,26 @@ main {
             height: 880px;
             width: 755px;
             position: absolute;
-            top: -250px;
+            top: -320px;
             left: -405px;
-        }
 
-        @media (max-width: 1139px) {
-            height: 375px;
-        }
+            @media (max-width: 1139px) {
+                height: 375px;
+                width: 270px;
+                position: absolute;
+                top: -100px;
+                left: -25px;
 
-        @media (max-width: 767px) {
-            height: 335px;
-        }
+            }
 
+            @media (max-width: 767px) {
+                height: 375px;
+                width: 270px;
+                position: absolute;
+                top: -100px;
+                left: -25px;
+            }
+        }
 
         .april_700m_mainimg {
             justify-content: center;
@@ -182,14 +311,39 @@ main {
             .april_700m_content {
                 .april_700m_content_title {
                     position: absolute;
-                    top: -10px;
+                    top: -70px;
                     left: 240px;
+
+                    @media (max-width: 1139px) {
+                        position: absolute;
+                        top: -130px;
+                        left: 160px;
+                    }
+
+                    @media (max-width: 767px) {
+                        position: absolute;
+                        top: -130px;
+                        left: 160px;
+                    }
                 }
 
                 .april_700m_content_down {
                     position: absolute;
-                    top: 70px;
+                    top: 10px;
                     left: 430px;
+
+                    @media (max-width: 1139px) {
+                        position: absolute;
+                        top: -75px;
+                        left: 260px;
+
+                    }
+
+                    @media (max-width: 767px) {
+                        position: absolute;
+                        top: 10px;
+                        left: 430px;
+                    }
                 }
             }
         }
@@ -201,17 +355,49 @@ main {
     height: 378px;
     width: 378px;
     position: absolute;
-    bottom: 350px;
-    right: -170px;
+    bottom: 300px;
+    right: -150px;
+
+    @media (max-width: 1139px) {
+        height: 175px;
+        width: 175px;
+        position: absolute;
+        top: -310px;
+        right: 80px;
+
+    }
+
+    @media (max-width: 767px) {
+        height: 175px;
+        width: 175px;
+        position: absolute;
+        top: -310px;
+        right: 80px;
+    }
 }
 
 .april_700m_squarerightbottomAleft {
     background-color: rgb(40, 148, 98);
     height: 350px;
     position: absolute;
-    top: 360px;
+    top: 280px;
     right: 0px;
 
+    @media (max-width: 1139px) {
+        height: 120px;
+        width: 125px;
+        position: absolute;
+        top: 180px;
+        right: 40px;
+    }
+
+    @media (max-width: 767px) {
+        height: 120px;
+        width: 125px;
+        position: absolute;
+        top: 180px;
+        right: 50px;
+    }
 }
 
 .april_700m_squarerightbottomBright {
@@ -219,8 +405,24 @@ main {
     height: 300px;
     // width: 255px;
     position: absolute;
-    top: 150px;
+    top: 70px;
     right: -185px;
+
+    @media (max-width: 1139px) {
+        height: 100px;
+        width: 86px;
+        position: absolute;
+        top: 100px;
+        right: -25px;
+    }
+
+    @media (max-width: 767px) {
+        height: 100px;
+        width: 86px;
+        position: absolute;
+        top: 100px;
+        right: -25px;
+    }
 }
 
 
@@ -229,9 +431,23 @@ main {
     width: 100%;
     margin-bottom: 200px;
     position: relative;
+    @media (max-width: 1139px) {
+        margin-bottom: 100px;
+    }
 
+    @media (max-width: 767px) {
+        margin-bottom: 60px;
+    }
     .april_may_title {
         margin-bottom: 100px;
+
+        @media (max-width: 1139px) {
+            margin-bottom: 60px;
+        }
+
+        @media (max-width: 767px) {
+            margin-bottom: 30px;
+        }
     }
 
     .april_may_content {
@@ -258,13 +474,19 @@ main {
             left: 100px;
 
             @media (max-width: 1139px) {
-                height: 255px;
-                width: 255px;
+                height: 260px;
+                width: 240px;
+                position: absolute;
+                top: 250px;
+                left: 0px;
             }
 
             @media (max-width: 767px) {
                 height: 190px;
                 width: 190px;
+                position: absolute;
+                top: 300px;
+                left: 100px;
             }
         }
 
@@ -273,11 +495,24 @@ main {
             position: absolute;
             bottom: -20px;
             left: 100px;
+
+            @media (max-width: 1139px) {
+                height: 255px;
+                width: 255px;
+                position: absolute;
+                bottom: -200px;
+                left: 0px;
+            }
+
+            @media (max-width: 767px) {
+                height: 190px;
+                width: 190px;
+                position: absolute;
+                bottom: -200px;
+                left: 0px;
+            }
         }
 
-        p {
-            font-size: 20px;
-        }
     }
 
     .april_may_right {
@@ -285,7 +520,7 @@ main {
         height: 374px;
         background-color: orange;
         position: absolute;
-        top: 250px;
+        top: 170px;
         right: 0px;
 
         @media (max-width: 1139px) {
@@ -305,37 +540,67 @@ main {
         bottom: 50px;
         right: 0;
 
-        p {
-            font-size: 20px;
+        @media (max-width: 1139px) {
+            position: absolute;
+            bottom: 45px;
+            right: -132px;
         }
+
+        @media (max-width: 767px) {
+            position: absolute;
+            bottom: 45px;
+            right: -132px;
+        }
+
+
     }
 
 }
 
 .april_2block_bottum {
-    height: 100hv;
-    position: relative;
+    width: 100%;
+    height: 895px;
+
+    @media (max-width: 1139px) {
+        height: 360px;
+    }
+
+    @media (max-width: 767px) {
+        height: 270px;
+    }
 
     .april_2block_bottum_left {
         background-color: grey;
-        height: 895px;
     }
 
     .april_2block_bottum_right {
         background-color: orange;
-        height: 895px;
     }
 }
 
 .april_stay {
     height: 370px;
 
+    @media (max-width: 1139px) {
+        height: 150px;
+    }
+
+    @media (max-width: 767px) {
+        height: 100px;
+    }
 }
 
 .april_party {
     background-color: orange;
     height: 880px;
 
+    @media (max-width: 1139px) {
+        height: 350px;
+    }
+
+    @media (max-width: 767px) {
+        height: 260px;
+    }
 }
 
 .april_snow {
@@ -343,10 +608,29 @@ main {
     height: 600px;
     padding-top: 180px;
 
+    @media (max-width: 1139px) {
+        height: 250px;
+        padding: 70px 0;
+    }
+
+    @media (max-width: 767px) {
+        height: 290px;
+    }
+
     .april_snow_content {}
 }
+
+
 
 .footer {
     background-color: grey;
     height: 150px;
+
+    @media (max-width: 1139px) {
+        height: 100px;
+    }
+
+    @media (max-width: 767px) {
+        height: 50px;
+    }
 }
