--- a/當季活動/css/april.css
+++ b/當季活動/css/april.css
@@ -47,13 +47,13 @@ p {
     font-size: 36px !important;
   }
   h3 {
-    font-size: 36px;
+    font-size: 22px !important;
   }
   h4 {
-    font-size: 24px;
+    font-size: 18px !important;
   }
   h5 {
-    font-size: 21px;
+    font-size: 16px !important;
   }
   p {
     font-size: 14px !important;
@@ -157,10 +157,12 @@ main {
   }
 }
 
-@media (max-width: 1139px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .april_woods .april_woods_left {
     height: 190px;
-    width: 190px;
+    position: absolute;
+    top: 80px;
+    left: 20px;
   }
 }
 
@@ -183,9 +185,11 @@ main {
 
 @media (max-width: 767px) {
   .april_woods .april_woods_square {
+    width: 55px;
+    height: 20px;
     position: absolute;
-    top: 100px;
-    right: -40px;
+    top: 160px;
+    right: 55px;
   }
 }
 
@@ -207,8 +211,8 @@ main {
 @media (max-width: 767px) {
   .april_woods .april_woods_right .april_woods_right_title {
     position: absolute;
-    top: 100px;
-    right: -40px;
+    top: 90px;
+    right: -170px;
   }
 }
 
@@ -230,9 +234,10 @@ main {
 
 @media (max-width: 767px) {
   .april_woods .april_woods_right .april_woods_right_content {
+    width: 130px;
     position: absolute;
-    bottom: 200px;
-    right: 0;
+    bottom: 50px;
+    right: 90px;
   }
 }
 
@@ -278,7 +283,7 @@ main {
 @media (max-width: 767px) {
   .april_700m {
     height: 400px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
   }
 }
 
@@ -308,11 +313,11 @@ main {
 
 @media (max-width: 767px) {
   .april_700m .april_700m_box .april_700m_squareleft {
-    height: 375px;
-    width: 270px;
+    height: 335px;
+    width: 198px;
     position: absolute;
-    top: -100px;
-    left: -25px;
+    top: -45px;
+    left: 0px;
   }
 }
 
@@ -322,6 +327,91 @@ main {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
+}
+
+.april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerighttop {
+  background-color: grey;
+  height: 378px;
+  width: 378px;
+  position: absolute;
+  bottom: 300px;
+  right: -150px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerighttop {
+    height: 175px;
+    width: 175px;
+    position: absolute;
+    top: -310px;
+    right: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerighttop {
+    height: 130px;
+    width: 130px;
+    position: absolute;
+    top: -260px;
+    right: 80px;
+  }
+}
+
+.april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomAleft {
+  background-color: #289462;
+  height: 350px;
+  position: absolute;
+  top: 280px;
+  right: 0px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomAleft {
+    height: 120px;
+    width: 125px;
+    position: absolute;
+    top: 180px;
+    right: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomAleft {
+    height: 90px;
+    width: 90px;
+    position: absolute;
+    top: 120px;
+    right: 50px;
+  }
+}
+
+.april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomBright {
+  background-color: #bb7de4;
+  height: 300px;
+  position: absolute;
+  top: 70px;
+  right: -185px;
+}
+
+@media (max-width: 1139px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomBright {
+    height: 100px;
+    width: 85px;
+    position: absolute;
+    top: 100px;
+    right: -25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_700m .april_700m_box .april_700m_mainimg .april_700m_squarerightbottomBright {
+    height: 75px;
+    width: 65px;
+    position: absolute;
+    top: 60px;
+    right: 0px;
+  }
 }
 
 .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
@@ -341,8 +431,8 @@ main {
 @media (max-width: 767px) {
   .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_title {
     position: absolute;
-    top: -130px;
-    left: 160px;
+    top: -70px;
+    left: 140px;
   }
 }
 
@@ -363,93 +453,8 @@ main {
 @media (max-width: 767px) {
   .april_700m .april_700m_box .april_700m_mainimg .april_700m_content .april_700m_content_down {
     position: absolute;
-    top: 10px;
-    left: 430px;
-  }
-}
-
-.april_700m_squarerighttop {
-  background-color: grey;
-  height: 378px;
-  width: 378px;
-  position: absolute;
-  bottom: 300px;
-  right: -150px;
-}
-
-@media (max-width: 1139px) {
-  .april_700m_squarerighttop {
-    height: 175px;
-    width: 175px;
-    position: absolute;
-    top: -310px;
-    right: 80px;
-  }
-}
-
-@media (max-width: 767px) {
-  .april_700m_squarerighttop {
-    height: 175px;
-    width: 175px;
-    position: absolute;
-    top: -310px;
-    right: 80px;
-  }
-}
-
-.april_700m_squarerightbottomAleft {
-  background-color: #289462;
-  height: 350px;
-  position: absolute;
-  top: 280px;
-  right: 0px;
-}
-
-@media (max-width: 1139px) {
-  .april_700m_squarerightbottomAleft {
-    height: 120px;
-    width: 125px;
-    position: absolute;
-    top: 180px;
-    right: 40px;
-  }
-}
-
-@media (max-width: 767px) {
-  .april_700m_squarerightbottomAleft {
-    height: 120px;
-    width: 125px;
-    position: absolute;
-    top: 180px;
-    right: 50px;
-  }
-}
-
-.april_700m_squarerightbottomBright {
-  background-color: #bb7de4;
-  height: 300px;
-  position: absolute;
-  top: 70px;
-  right: -185px;
-}
-
-@media (max-width: 1139px) {
-  .april_700m_squarerightbottomBright {
-    height: 100px;
-    width: 86px;
-    position: absolute;
-    top: 100px;
-    right: -25px;
-  }
-}
-
-@media (max-width: 767px) {
-  .april_700m_squarerightbottomBright {
-    height: 100px;
-    width: 86px;
-    position: absolute;
-    top: 100px;
-    right: -25px;
+    top: -25px;
+    left: 220px;
   }
 }
 
@@ -524,11 +529,11 @@ main {
 
 @media (max-width: 767px) {
   .april_may .april_may_content .april_may_left {
-    height: 190px;
-    width: 190px;
+    height: 180px;
+    width: 180px;
     position: absolute;
-    top: 300px;
-    left: 100px;
+    top: 180px;
+    left: 30px;
   }
 }
 
@@ -554,8 +559,8 @@ main {
     height: 190px;
     width: 190px;
     position: absolute;
-    bottom: -200px;
-    left: 0px;
+    bottom: -150px;
+    left: 30px;
   }
 }
 
@@ -572,6 +577,9 @@ main {
   .april_may .april_may_right {
     width: 240px;
     height: 240px;
+    position: absolute;
+    top: 170px;
+    right: 0px;
   }
 }
 
@@ -579,6 +587,9 @@ main {
   .april_may .april_may_right {
     width: 180px;
     height: 180px;
+    position: absolute;
+    top: 113px;
+    right: 40px;
   }
 }
 
@@ -600,8 +611,8 @@ main {
 @media (max-width: 767px) {
   .april_may .april_may_right_content {
     position: absolute;
-    bottom: 45px;
-    right: -132px;
+    bottom: 20px;
+    right: -155px;
   }
 }
 
@@ -679,6 +690,12 @@ main {
 @media (max-width: 767px) {
   .april_snow {
     height: 290px;
+  }
+}
+
+@media (max-width: 767px) {
+  .april_snow .april_snow_content {
+    text-align: center;
   }
 }
 
