--- a/當季活動/css/april.scss
+++ b/當季活動/css/april.scss
@@ -75,11 +75,9 @@ main {
 }
 
 .april_banner {
-    width: 100%;
-    height: 100vh;
-    background-color: grey;
+    width: 100%; 
     margin-bottom: 200px;
-    position: relative;
+  
 
     @media (max-width: 1139px) {
         margin-bottom: 100px;
@@ -89,30 +87,73 @@ main {
         margin-bottom: 60px;
     }
 
-
-    .april_banner_text {
-        .april_banner_text_title {
-            font-size: 80px;
-            top: 0;
+    .april_banner_video {
+        #myVideo {
             right: 0;
             bottom: 0;
-            left: 0;
-            margin: auto;
+            min-width: 100%;
+            min-height: 100%;
         }
 
+    }
+
+    .april_banner_text {
+        width: 100%;
+        position: relative;
+
         .april_banner_text_subtitle {
-            font-size: 50px;
-            // width: 400px;
-            // height: 50px;
             -moz-transform: rotate(-20deg);
             -webkit-transform: rotate(-20deg);
             -o-transform: rotate(-20deg);
             -ms-transform: rotate(-20deg);
             transform: rotate(-20deg);
             position: absolute;
-            top: 320px;
-            left: 350px;
+            top: 445px;
+            left: 590px;
+
+            @media (max-width: 1139px) {
+                position: absolute;
+                top: 240px;
+                left: 215px;
+            }
+
+            @media (max-width: 767px) {
+                position: absolute;
+                top: 230px;
+                left: 155px;
+            }
+
+
         }
+
+        .april_banner_text_title {
+            align-items: center;
+            position: absolute;
+            top: 440px;
+            left: 320px;
+
+            @media (max-width: 1139px) {
+                position: absolute;
+                top: 240px;
+                left: 20px;
+            }
+
+            @media (max-width: 767px) {
+                position: absolute;
+                top: 230px;
+                left: 20px;
+            }
+
+            h2 {
+                text-align-last: justify;
+                color: white;
+                text-shadow: 0px 0px 8px #fff, 0px 0px 42px #f72, 0px 0px 72px #f84, 0px 0px 150px #fa5;
+                // text-shadow: 1px 2px 3px rgba(67,8,7,0.8); 
+            }
+
+        }
+
+
     }
 
 }
