--- a/當季活動/當季活動_banner/scss/style.css
+++ b/當季活動/當季活動_banner/scss/style.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
 }
 
-.all .activities_banner {
+.all .april_banner {
   width: 100%;
   height: 100vh;
   background-color: grey;
@@ -23,7 +23,7 @@ body {
           justify-content: center;
 }
 
-.all .activities_banner .activities_banner_content {
+.all .april_banner .april_banner_content {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -32,20 +32,20 @@ body {
           justify-content: center;
 }
 
-.all .activities_banner .activities_banner_content p {
+.all .april_banner .april_banner_content p {
   text-align-last: justify;
   color: white;
   font-size: 36px;
   margin: 0;
 }
 
-.all .activities_banner .activities_banner_snow {
+.all .april_banner .april_banner_snow {
   -webkit-transform: rotate(-15deg);
           transform: rotate(-15deg);
   position: absolute;
 }
 
-.all .activities_banner .activities_banner_snow p {
+.all .april_banner .april_banner_snow p {
   font-size: 60px;
   margin: 0;
 }
