--- a/園區介紹/css/garden.scss
+++ b/園區介紹/css/garden.scss
@@ -8,13 +8,31 @@ $font-h3:24px;
     box-sizing: border-box;
 }
 
-p {
-    font-size: 19px;
-}
-
 h3 {
     font-size: 24px;
+
+    @media (max-width: 1139px) {
+        font-size: 20px;
+    }
+
+    @media (max-width: 767px) {
+        font-size: 16px;
+    }
 }
+
+p {
+    font-size: 19px;
+
+    @media (max-width: 1139px) {
+        font-size: 16px;
+    }
+
+    @media (max-width: 767px) {
+        font-size: 14px;
+    }
+}
+
+
 
 .garden_navigationbar {
     height: 180px;
@@ -146,7 +164,9 @@ h3 {
 
                 h3 {
                     margin: 70px 0 40px 0;
-
+                    @media (max-width: 1139px) {
+                        margin: 10px 0 20px 0;
+                    }
                     @media (max-width: 767px) {
                         margin: 40px 0 30px 0;
                     }
@@ -172,7 +192,7 @@ h3 {
             margin-bottom: 60px;
         }
 
-        .garden_walks_text h3{
+        .garden_walks_text h3 {
 
             margin-bottom: 100px;
 
@@ -283,10 +303,7 @@ h3 {
 
                 }
             }
-
-
         }
-
 
     }
 
