--- a/園區介紹/css/garden.css
+++ b/園區介紹/css/garden.css
@@ -7,6 +7,7 @@
 
 h3 {
   font-size: 24px;
+  color: #000;
 }
 
 @media (max-width: 1139px) {
@@ -33,8 +34,14 @@ p {
 
 @media (max-width: 767px) {
   p {
-    font-size: 14px;
+    font-size: 12px;
   }
+}
+
+button img {
+  height: 20px;
+  width: 40px;
+  color: blue;
 }
 
 .garden_navigationbar {
@@ -161,7 +168,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_view {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
@@ -207,7 +214,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_walks {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
@@ -239,7 +246,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_info {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
@@ -255,7 +262,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_info .garden_info_text {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
@@ -269,8 +276,32 @@ p {
   padding: 50px;
 }
 
+@media (max-width: 1139px) {
+  .content .garden_info .garden_info_text .garden_info_text_up .garden_info_text_up_zh {
+    padding: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .content .garden_info .garden_info_text .garden_info_text_up .garden_info_text_up_zh {
+    padding: 20px;
+  }
+}
+
 .content .garden_info .garden_info_text .garden_info_text_down {
   width: 360px;
+}
+
+@media (max-width: 1139px) {
+  .content .garden_info .garden_info_text .garden_info_text_down {
+    width: 290px;
+  }
+}
+
+@media (max-width: 767px) {
+  .content .garden_info .garden_info_text .garden_info_text_down {
+    width: 215px;
+  }
 }
 
 .content .garden_info .garden_info_card {
@@ -290,7 +321,19 @@ p {
 }
 
 .content .garden_info .garden_info_card .garden_info_card_text {
-  margin: 80px;
+  margin: 80px 0;
+}
+
+@media (max-width: 1139px) {
+  .content .garden_info .garden_info_card .garden_info_card_text {
+    margin: 40px 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .content .garden_info .garden_info_card .garden_info_card_text {
+    margin: 30px 0;
+  }
 }
 
 .content .garden_info .garden_info_card_button {
@@ -299,7 +342,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_info .garden_info_card_button {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
@@ -315,7 +358,7 @@ p {
 
 @media (max-width: 1139px) {
   .content .garden_info .garden_info_dining {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
   }
 }
 
